# gtkspot

./: .gitignore  Cargo.toml  README.md  com.github.kelmes.gtkspot.json  meson.build  mockup.xopp
data/: com.github.kelmes.gtkspot.appdata.xml.in  com.github.kelmes.gtkspot.desktop.in  com.github.kelmes.gtkspot.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: album.rs  artist.rs  authentication.rs  commands.rs  events.rs  gtkspot.gresource.xml  gtkspot.ui  main.rs  meson.build  playlist.rs  search.rs  spotify.rs  spotui.glade  traits.rs  window.rs  window.ui
