[package]
name = "gtkspot"
version = "0.1.0"
authors = ["Kieran Elmes <kelmes@caelus.nz>"]
edition = "2018"

[dependencies]
#chrono = "0.4"
#url = "1.4"
#futures-preview = { version = "0.3.0-alpha.15", optional = true}
#atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = { version = "0.9.0", features = ["v3_16"] }
libhandy = { git = "https://gitlab.gnome.org/World/Rust/libhandy-rs" }
keyring = "0.10.1"
#pango = "^0"
#cairo-rs = { version = "^0", features = ["png"] }
#rspotify = "0.9.0"
#librespot = "0.1.1"
#librespot-core = "0.1.1"
#librespot-playback = "0.1.1"
#librespot-protocol = "0.1.1"
env_logger =  {version = "0.6", default-features = false, features = ["termcolor","humantime","atty"]}

# ncspot
clap = "2.33.0"
chrono = "0.4"
reqwest = "0.9"
crossbeam-channel = "0.4"
directories = "2.0"
failure = "0.1"
fern = "0.5"
futures = { version = "0.3", features = ["compat"] }
futures_01 = { version = "0.1", package = "futures" }
lazy_static = "1.3.0"
librespot-core = "0.1.3"
librespot-playback = "0.1.3"
librespot-protocol = "0.1.3"
log = "0.4.0"
rspotify = "0.8"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
tokio-core = "0.1"
tokio-timer = "0.2"
unicode-width = "0.1.5"
dbus = { version = "0.6.4", optional = true }
rand = "0.7"
webbrowser = "0.5"
clipboard = { version = "0.5", optional = true }
url = "1.7"
strum = "0.17.1"
strum_macros = "0.17.1"

[features]
#default = ["gtk_3_22_30", "futures", "subclassing"]
share_clipboard = ["clipboard"]
alsa_backend = ["librespot-playback/alsa-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
mpris = ["dbus"]
default = ["share_clipboard", "pulseaudio_backend", "mpris"]
